--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="cards">
 			<div class="imgBx">
-				<img src="./Image3.png" alt="Sara Ahmed">
+				<img src="pictures/cakesweb.png" alt="Sara Ahmed">
 			</div>
 			<div class="content">
 				<div class="details">
