--- a/index.html
+++ b/index.html
@@ -2,7 +2,25 @@
 <html>
 	<title>My Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-<section class="home">
+
+<nav class="navbar">
+  <div class="navbar-container">
+    <a href="#" class="logo">Logo</a>
+    <div class="hamburger-menu">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+</nav>
+
+    <section class="home">
   <div class="text-container">
     <h1>Hi!<br> I am Joanna <br>Jurczuk</h1>
     <p>
