--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
 	<title>My Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-<nav class="navbar">
-  <div class="navbar-container">
-    <a href="#" class="logo">Logo</a>
-    <div class="hamburger-menu">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-    </div>
-    <ul class="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+<nav>
+  <div class="hamburger-menu">
+    <div></div>
+    <div></div>
+    <div></div>
   </div>
+  <ul class="nav-links">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Services</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
 </nav>
+
 
     <section class="home">
   <div class="text-container">
